--- a/React/birthday/src/App.css
+++ b/React/birthday/src/App.css
@@ -37,12 +37,19 @@
   }
 }
 
+table {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px;
+}
+
 .props_header {
   font-size: x-large;
-  text-align: left;
+  text-align: center;
+  padding: 5px;
 }
 
 .props_data {
-  align-items: left;
-  text-align: left;
+  align-items: center;
+  text-align: center;
 }
